--- a/style.css
+++ b/style.css
@@ -51,6 +51,6 @@ body {
     top: 8px;
     width: 10px;
     height: 10px;
-    background-color: #007bff;
+    background-color: hwb(138 7% 5%);
     border-radius: 50%;
 }
